sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:5: error: value += is not a member of Int
    if (k == 0){k += 1}
                  ^AlgGnomeSort:6: error: value -= is not a member of Int
    else if (k == getValueCount-1){ k -= 1}
                                      ^AlgGnomeSort:8: error: not found: value i
    if (isSmaller(i+1,i)){
                  ^AlgGnomeSort:8: error: not found: value i
    if (isSmaller(i+1,i)){
                      ^AlgGnomeSort:9: error: not found: value i
      swap(i,i+1)
           ^AlgGnomeSort:9: error: not found: value i
      swap(i,i+1)
             ^AlgGnomeSort:10: error: value -= is not a member of Int
      k -= 1
        ^AlgGnomeSort:12: error: value += is not a member of Int
    else {k +=1 }
            ^